@@ -1,4 +1,6 @@
 break sim_io_error
+break sim_core_signal
+@cgen_breaks@
 
 define dump
 set sim_debug_dump ()
